--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex API Project</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/pokeball.png" />
   </head>
-  <body></body>
+  <body>
+    <div class="contentWrapper"></div>
+  </body>
 </html>
