--- a/index.html
+++ b/index.html
@@ -5,8 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex API Project</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/pokeball.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/globalComponentStyling.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="contentWrapper"></div>
+    <div class="contentWrapper">
+      <nav class="navbar navbar-dark bg-dark fullWidth customHeight">
+        <div class="container-fluid">
+          <div class="logoWrapper">
+            <img src="assets/img/pokedex.png" class="pokedexMainIcon" />
+            <a class="navbar-brand">My Pokedex API Project</a>
+          </div>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </nav>
+      <main class="mainContentWrapper fullWidth">
+        <div class="content"></div>
+      </main>
+      <footer class="bg-dark fullWidth customHeight">
+        <div class="contributions">
+          <a
+            href="https://www.flaticon.com/free-icons/pokemon"
+            title="pokemon icons"
+            >Pokemon icons created by Nikita Golubev - Flaticon</a
+          >
+          <a
+            href="https://www.flaticon.com/free-icons/pokedex"
+            title="pokedex icons"
+            >Pokedex icons created by Roundicons Freebies - Flaticon</a
+          >
+        </div>
+        <p class="copyright">© 2024 Copyright: David Gerliz</p>
+      </footer>
+    </div>
   </body>
 </html>
