--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/templates.js"></script>
   </head>
-  <body>
+  <body onload="init()">
     <div class="contentWrapper">
       <nav class="navbar navbar-dark bg-dark fullWidth customHeight">
         <div class="container-fluid">
@@ -41,7 +43,7 @@
         </div>
       </nav>
       <main class="mainContentWrapper fullWidth">
-        <div class="content"></div>
+        <div class="content" id="content"></div>
       </main>
       <footer class="bg-dark fullWidth customHeight">
         <div class="contributions">
