added total pokemon counter

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
       </nav>
       <main class="mainContentWrapper fullWidth">
+        <h1 id="totalPokemonCount">Total Pokemon Count: `${data.count}`</h1>
         <div class="content" id="content"></div>
       </main>
       <footer class="bg-dark fullWidth customHeight">
