added atztribution for pokempon type icons

--- a/index.html
+++ b/index.html
@@ -60,8 +60,15 @@
             title="pokedex icons"
             >Pokedex icons created by Roundicons Freebies - Flaticon</a
           >
+          <a
+            href="https://github.com/partywhale/pokemon-type-icons"
+            title="pokedemon type icons"
+            >Copyright (c) 2022 James Watkins - Pokemon type icons</a
+          >
         </div>
-        <p class="copyright">© 2024 Copyright: David Gerliz</p>
+        <div>
+          <p class="copyright">© 2024 Copyright: David Gerliz</p>
+        </div>
       </footer>
     </div>
   </body>
