added button for rendering netx pokemon

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <main class="mainContentWrapper fullWidth">
         <h1 id="totalPokemonCount">Total Pokemon Count: `${data.count}`</h1>
         <div class="content" id="content"></div>
+        <button type="button" class="btn btn-primary btn-lg">Load more</button>
       </main>
 
       <footer class="bg-dark fullWidth customHeight">
