--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     ></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/templates.js"></script>
+    <script src="./scripts/db.js"></script>
   </head>
   <body onload="init()">
     <div class="contentWrapper">
