--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <button
           type="button"
           class="btn btn-primary btn-lg"
+          id="loadMoreButton"
           onclick="renderNextPokemon()"
         >
           Load more
