--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/globalComponentStyling.css" />
     <link rel="stylesheet" href="styles/backgroundColors.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_back"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -55,8 +63,8 @@
         </div>
       </nav>
 
-      <main class="mainContentWrapper fullWidth">
-        <h1 id="totalPokemonCount">Total Pokemon Count: `${data.count}`</h1>
+      <main class="mainContentWrapper fullWidth" id="mainContainer">
+        <h1 id="totalPokemonCount"></h1>
         <div class="content" id="content"></div>
         <button
           type="button"
