implementet limit for searching Pkm

--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
         >
           Load more
         </button>
+
+        <button
+          type="button"
+          class="btn hidden btn-primary btn-lg"
+          id="goBackToStartBtn"
+          onclick="resetToAllPokemon()"
+        >
+          Go back to start
+        </button>
       </main>
 
       <footer class="bg-dark fullWidth customHeight">
