added overlay for showing more details

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
           <p class="copyright">© 2024 Copyright: David Gerliz</p>
         </div>
       </footer>
+
+      <div id="blackOverlay" class="hidden">
+        <div id="detailedPkmContent"></div>
+      </div>
     </div>
   </body>
 </html>
