Code Improvments, less async function, faster responses thanks to local saving of pokemon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/globalComponentStyling.css" />
     <link rel="stylesheet" href="./styles/backgroundColors.css" />
-    <link rel="stylesheet" href="styles/responsiveDesign.css" />
+    <link rel="stylesheet" href="./styles/responsiveDesign.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
