--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <link rel="stylesheet" href="./styles/globalComponentStyling.css" />
     <link rel="stylesheet" href="./styles/backgroundColors.css" />
     <link rel="stylesheet" href="./styles/responsiveDesign.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -34,28 +31,11 @@
         <div class="container-fluid">
           <div class="logoWrapper">
             <img src="assets/img/pokedex.png" class="pokedexMainIcon" />
-            <a
-              href="#"
-              onclick="window.location.reload(false);"
-              class="navbar-brand"
-              >My Pokedex API Project</a
-            >
+            <a href="#" onclick="window.location.reload(false);" class="navbar-brand">My Pokedex API Project</a>
           </div>
           <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="text"
-              placeholder="Search for Pokémon..."
-              aria-label="Search"
-              id="pokemonSearch"
-            />
-            <button
-              type="button"
-              class="btn btn-primary btn-lg"
-              onclick="filterPokemon()"
-            >
-              Search
-            </button>
+            <input class="form-control me-2" type="text" placeholder="Search for Pokémon..." aria-label="Search" id="pokemonSearch" />
+            <button type="button" class="btn btn-primary btn-lg" onclick="filterPokemon()">Search</button>
           </form>
         </div>
       </nav>
@@ -64,44 +44,18 @@
         <div class="content">
           <h1 id="totalPokemonCount"></h1>
           <div class="content" id="content"></div>
-          <button
-            type="button"
-            class="btn btn-primary btn-lg"
-            id="loadMoreButton"
-            onclick="renderNextPokemon()"
-          >
-            Load more
-          </button>
+          <button type="button" class="btn btn-primary btn-lg" id="loadMoreButton" onclick="renderNextPokemon()">Load more</button>
 
-          <button
-            type="button"
-            class="btn hidden btn-primary btn-lg"
-            id="goBackToStartBtn"
-            onclick="resetToAllPokemon()"
-          >
-            Go back to start
-          </button>
+          <button type="button" class="btn hidden btn-primary btn-lg" id="goBackToStartBtn" onclick="resetToAllPokemon()">Go back to start</button>
         </div>
       </main>
 
       <footer class="bg-dark fullWidth customHeight">
         <div class="footerContent">
           <div class="contributions">
-            <a
-              href="https://www.flaticon.com/free-icons/pokemon"
-              title="pokemon icons"
-              >Pokemon icons created by Nikita Golubev - Flaticon</a
-            >
-            <a
-              href="https://www.flaticon.com/free-icons/pokedex"
-              title="pokedex icons"
-              >Pokedex icons created by Roundicons Freebies - Flaticon</a
-            >
-            <a
-              href="https://github.com/partywhale/pokemon-type-icons"
-              title="pokedemon type icons"
-              >Copyright (c) 2022 James Watkins - Pokemon type icons</a
-            >
+            <a href="https://www.flaticon.com/free-icons/pokemon" title="pokemon icons">Pokemon icons created by Nikita Golubev - Flaticon</a>
+            <a href="https://www.flaticon.com/free-icons/pokedex" title="pokedex icons">Pokedex icons created by Roundicons Freebies - Flaticon</a>
+            <a href="https://github.com/partywhale/pokemon-type-icons" title="pokedemon type icons">Copyright (c) 2022 James Watkins - Pokemon type icons</a>
           </div>
           <div class="copyrightContainer">
             <p class="copyright">© 2024 Copyright: <span>David Gerliz</span></p>
